crates/filekind-core/tests/snapshots/golden__londo_system__README_md.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
# Londo Save — installing the `.londo` file type

Generated by filekind [VERSION] — do not edit.
Source: Londo Save (.londo)
Regenerate with: filekind build

| | |
|---|---|
| Extension | `.londo` |
| MIME type | `application/vnd.london.londo` |
| Container | `binary` |
| Magic | `4C 4E 44 4F 01` (`LNDO.`) at offset 0 |
| Handler | `londo-player` |
| Scope | system-wide (requires root/elevation) |
| Targets | windows, linux, macos |

Nothing in this directory has been installed. filekind is a compiler: it emits
artifacts, and you decide whether to run them. Every install step below has a
matching uninstall step.


## Windows

```
windows/
├── register.reg        double-click, or: reg import register.reg
├── unregister.reg      the undo
├── inno-snippet.iss    paste into an Inno Setup script
├── nsis-snippet.nsh    !include from an NSIS script
└── icon.ico            16/32/48/64/128/256, multi-resolution
```

1. Read `register.reg`. It writes to `HKEY_LOCAL_MACHINE`.
2. Run it: double-click, or `reg import windows\register.reg`.
3. Restart `explorer.exe` if the new icon or type name does not appear.

**About defaults.** `register.reg` makes `.londo` appear in Explorer's
*Open with* list and gives it a name, a description and an icon.
It does **not** make `londo-player` the
default handler, because Windows 10 and later do not allow that from a script.
The user picks a default in *Settings → Apps → Default apps*. Tools that work
around this get flagged as malware; filekind will not ship a friendlier version
of that.

To undo: run `windows\unregister.reg`.


## Linux

```
linux/
├── londo-save-mime.xml
├── londo-player.desktop
├── install.sh
├── uninstall.sh
└── icons/hicolor/…/mimetypes/application-vnd.london.londo.png
```

```sh
cd linux
sudo ./install.sh
```

The script calls `xdg-mime` and `xdg-icon-resource` — the same tools a `.deb`
would — and writes to `${PREFIX:-/usr}/share`. It never edits the MIME database
directly. Read it first; it is about forty lines.

Requires `xdg-utils`. Debian/Ubuntu: `apt install xdg-utils`.
Fedora: `dnf install xdg-utils`.

Check it worked:

```sh
xdg-mime query filetype yourfile.londo     # → application/vnd.london.londo
xdg-mime query default application/vnd.london.londo     # → londo-player.desktop
```

To undo: `sudo ./uninstall.sh`


## macOS — experimental

```
macos/
├── Info.plist.fragment
├── icon.icns
└── Londo Save.app/        (only with --stub-app)
```

Read this part before spending an afternoon on it. A UTI declaration is only
honoured inside a real `.app` bundle's `Info.plist`; a loose plist does
nothing. Launch Services additionally ignores bundles that are not codesigned
and notarised, which requires an Apple Developer account (~$99/yr).

So the realistic use of `Info.plist.fragment` is to paste its two arrays into
the `Info.plist` of an app you already sign and ship. The `--stub-app` bundle
is for local experimentation only.

After installing a bundle, force a re-scan:

```sh
/System/Library/Frameworks/CoreServices.framework/Frameworks/LaunchServices.framework/Support/lsregister \
    -f /Applications/Londo Save.app
```

## Content detection (`file`)

`magic.txt` is a libmagic pattern.

```sh
file --magic-file magic.txt yourfile.londo
cat magic.txt >> ~/.magic && file --compile ~/.magic   # install for your user
```

## Icon warnings

The icon pipeline had something to say about the source image:

- the 1024×1024 entry was upscaled from a smaller source and will look soft


---

Regenerate everything here with `filekind build`. Edit the spec, not these
files.
