crates/filekind-core/tests/snapshots/golden__londo_system__linux_londo-save-mime_xml.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
<?xml version="1.0" encoding="UTF-8"?>
<!--
Generated by filekind [VERSION] — do not edit.
Source: Londo Save (.londo)
Regenerate with: filekind build
-->
<mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
  <mime-type type="application/vnd.london.londo">
    <comment>Londo project save file</comment>
    <glob pattern="*.londo"/>
    <!-- 4C 4E 44 4F 01  (LNDO.) -->
    <magic priority="50">
      <match type="string" value="LNDO\x01" offset="0"/>
    </magic>
    <icon name="application-vnd.london.londo"/>
    <generic-icon name="application-x-generic"/>
  </mime-type>
</mime-info>
