crates/filekind-core/tests/snapshots/golden__londo_system__macos_Info_plist_fragment.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
<!--
Generated by filekind 0.5.0 — do not edit.
Source: Londo Save (.londo)
Regenerate with: filekind build

EXPERIMENTAL. Read this before you spend an afternoon wondering why nothing
happens.

A UTI declaration is only read out of a real .app bundle's Info.plist.
A loose plist file on disk does nothing at all. Launch Services also ignores
bundles that are not codesigned and notarised, which needs an Apple Developer
account. Until then this fragment is useful for exactly one thing: pasting
into the Info.plist of an app you already ship.

Merge the two arrays below into the <dict> at the top level of your
Info.plist. If those keys already exist, append to them rather than replacing.

After installing the bundle, force a re-scan:

  /System/Library/Frameworks/CoreServices.framework/Frameworks/\
LaunchServices.framework/Support/lsregister -f /Applications/Londo Save.app
-->

<key>UTExportedTypeDeclarations</key>
<array>
  <dict>
    <key>UTTypeIdentifier</key>
    <string>wtf.londo.player.londo</string>
    <key>UTTypeDescription</key>
    <string>Londo project save file</string>
    <key>UTTypeConformsTo</key>
    <array>
      <string>public.data</string>
      <string>public.archive</string>
    </array>
    <key>UTTypeIconFile</key>
    <string>icon.icns</string>
    <key>UTTypeTagSpecification</key>
    <dict>
      <key>public.filename-extension</key>
      <array>
        <string>londo</string>
      </array>
      <key>public.mime-type</key>
      <array>
        <string>application/vnd.london.londo</string>
      </array>
    </dict>
  </dict>
</array>

<key>CFBundleDocumentTypes</key>
<array>
  <dict>
    <key>CFBundleTypeName</key>
    <string>Londo Save</string>
    <key>CFBundleTypeRole</key>
    <string>Editor</string>
    <key>LSHandlerRank</key>
    <string>Owner</string>
    <key>LSItemContentTypes</key>
    <array>
      <string>wtf.londo.player.londo</string>
    </array>
    <key>CFBundleTypeIconFile</key>
    <string>icon.icns</string>
  </dict>
</array>
