crates/filekind-core/tests/snapshots/golden__londo_system__windows_inno-snippet_iss.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
; Generated by filekind [VERSION] — do not edit.
; Source: Londo Save (.londo)
; Regenerate with: filekind build
;
; Paste into your Inno Setup script. Unlike the loose .reg, an installer knows
; its own install directory, so the icon path here is real.
;
; Ship icon.ico alongside your executable:
;
;   [Files]
;   Source: "windows\icon.ico"; DestDir: "{app}"; Flags: ignoreversion

[Registry]
Root: HKLM; Subkey: "Software\Classes\.londo"; ValueType: string; ValueName: ""; ValueData: "London.LondoSave.1"; Flags: uninsdeletevalue
Root: HKLM; Subkey: "Software\Classes\.londo"; ValueType: string; ValueName: "Content Type"; ValueData: "application/vnd.london.londo"; Flags: uninsdeletevalue
Root: HKLM; Subkey: "Software\Classes\.londo"; ValueType: string; ValueName: "PerceivedType"; ValueData: "document"; Flags: uninsdeletevalue
Root: HKLM; Subkey: "Software\Classes\.londo\OpenWithProgids"; ValueType: string; ValueName: "London.LondoSave.1"; ValueData: ""; Flags: uninsdeletevalue uninsdeletekeyifempty
Root: HKLM; Subkey: "Software\Classes\London.LondoSave.1"; ValueType: string; ValueName: ""; ValueData: "Londo project save file"; Flags: uninsdeletekey
Root: HKLM; Subkey: "Software\Classes\London.LondoSave.1"; ValueType: string; ValueName: "FriendlyTypeName"; ValueData: "Londo Save"; Flags: uninsdeletekey
Root: HKLM; Subkey: "Software\Classes\London.LondoSave.1\DefaultIcon"; ValueType: string; ValueName: ""; ValueData: "{app}\icon.ico,0"; Flags: uninsdeletekey
Root: HKLM; Subkey: "Software\Classes\London.LondoSave.1\shell\open\command"; ValueType: string; ValueName: ""; ValueData: """{app}\londo-player"" ""%1"""; Flags: uninsdeletekey
Root: HKLM; Subkey: "Software\Classes\MIME\Database\Content Type\application/vnd.london.londo"; ValueType: string; ValueName: "Extension"; ValueData: ".londo"; Flags: uninsdeletekey

[Code]
// Tell the shell the association changed, so Explorer picks up the new icon
// without a sign-out. SHCNE_ASSOCCHANGED = $08000000, SHCNF_IDLIST = 0.
procedure SHChangeNotify(wEventId: Integer; uFlags: Cardinal; dwItem1, dwItem2: Cardinal);
  external 'SHChangeNotify@shell32.dll stdcall';

procedure CurStepChanged(CurStep: TSetupStep);
begin
  if CurStep = ssPostInstall then
    SHChangeNotify($08000000, 0, 0, 0);
end;
