crates/filekind-core/tests/snapshots/golden__londo_system__windows_nsis-snippet_nsh.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
; Generated by filekind 0.5.0 — do not edit.
; Source: Londo Save (.londo)
; Regenerate with: filekind build
;
; !include this from your NSIS script, then call the macros:
;
;   !insertmacro FilekindRegister
;   ...
;   Section "Uninstall"
;     !insertmacro FilekindUnregister
;   SectionEnd

!ifndef FILEKIND_LONDO_NSH
!define FILEKIND_LONDO_NSH

!define FK_ROOT HKLM
!define FK_EXT ".londo"
!define FK_PROGID "London.LondoSave.1"
!define FK_MIME "application/vnd.london.londo"

!macro FilekindRegister
  WriteRegStr ${FK_ROOT} "Software\Classes\${FK_EXT}" "" "${FK_PROGID}"
  WriteRegStr ${FK_ROOT} "Software\Classes\${FK_EXT}" "Content Type" "${FK_MIME}"
  WriteRegStr ${FK_ROOT} "Software\Classes\${FK_EXT}" "PerceivedType" "document"
  WriteRegStr ${FK_ROOT} "Software\Classes\${FK_EXT}\OpenWithProgids" "${FK_PROGID}" ""
  WriteRegStr ${FK_ROOT} "Software\Classes\${FK_PROGID}" "" "Londo project save file"
  WriteRegStr ${FK_ROOT} "Software\Classes\${FK_PROGID}" "FriendlyTypeName" "Londo Save"
  WriteRegStr ${FK_ROOT} "Software\Classes\${FK_PROGID}\DefaultIcon" "" "$INSTDIR\icon.ico,0"
  WriteRegStr ${FK_ROOT} "Software\Classes\${FK_PROGID}\shell\open\command" "" '"$INSTDIR\londo-player" "%1"'
  WriteRegStr ${FK_ROOT} "Software\Classes\MIME\Database\Content Type\${FK_MIME}" "Extension" "${FK_EXT}"
  ; SHCNE_ASSOCCHANGED so Explorer refreshes without a sign-out.
  System::Call 'shell32::SHChangeNotify(i 0x08000000, i 0, i 0, i 0)'
!macroend

!macro FilekindUnregister
  DeleteRegValue ${FK_ROOT} "Software\Classes\${FK_EXT}\OpenWithProgids" "${FK_PROGID}"
  DeleteRegValue ${FK_ROOT} "Software\Classes\${FK_EXT}" ""
  DeleteRegValue ${FK_ROOT} "Software\Classes\${FK_EXT}" "Content Type"
  DeleteRegKey /ifempty ${FK_ROOT} "Software\Classes\${FK_EXT}\OpenWithProgids"
  DeleteRegKey /ifempty ${FK_ROOT} "Software\Classes\${FK_EXT}"
  DeleteRegKey ${FK_ROOT} "Software\Classes\${FK_PROGID}"
  DeleteRegKey ${FK_ROOT} "Software\Classes\MIME\Database\Content Type\${FK_MIME}"
  System::Call 'shell32::SHChangeNotify(i 0x08000000, i 0, i 0, i 0)'
!macroend

!endif
